--- a/chat/index.html
+++ b/chat/index.html
@@ -9,7 +9,8 @@
     <link href="css/default.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Playfair+Display" />
     <script src="./js/main.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script>
+    </script>
 </head>
 
 <body>
