--- a/chat/index.html
+++ b/chat/index.html
@@ -15,14 +15,15 @@
 
 <body>
 
-    <p id="title">WIRTUALNY PAN RYSZARD </p>
+    <p id="title">WIRTUALNY PAN RYSZARD </p> 
 
-    <p id="chatLog"></p>
+    <p id="chatLog"></p> <!--okno chata -->
 
 
 
-    <input id="userBox" type="text" onkeydown="if (event.keyCode == 13) {talk()}">
-    <button class="send" type="submit" value="Wyślij" onclick="talk()"> WYŚLIJ </button>
+    <input id="userBox" type="text" onkeydown="if (event.keyCode == 13) {talk()}"> <!-- funkcja która nadaje przycisku Enter
+funkcję wysłania wiadaomości.
+    <button class="send" type="submit" value="Wyślij" onclick="talk()"> WYŚLIJ </button> <!-- przyćisk wysyłający wiadomość -->
     <br>
 
 
